        - Adicionada função que obtém infos(username, score, games) de cada player

05-06-2025

    Matsura (src, include):
        - Inicio da integração da interface de login com a manipulação de arquivos
        - Adição de mensagens de erro de login
        - Inicio da implementação de tela de registro separada do login

06-06-2025

    Matsura (src, include):
        - Integração da manipulação de arquivos e interface de login concluída
        - Criação de tela de registro com confirmação de senha concluído

    Matsura (Makefile, src, include):
        -Menu de login e registro concluído
        -Nova Makefile com o main incluindo o menu

    Sam (assets):
        - Adicionados mais sprites para UI

07-06-2025

    Pedro (Makefile, src):
        - Atualização do makefile com a inclusão de novos objetos
        - Atualização do registration para que o programa rode mesmo sem o arquivo .txt

    Sam (main.cpp, game_loop, moving_button):
        - Adicionadas funcionalidades para o moving_button:
            - Método para setar o estado de pressionado
            - Método para ler o estado de pressionado
        - Corrigido um mal funcionamento do método contains_click do moving_button
        - Adicionado um botão de pause funcional
    
    Pedro (registration):
        - Atualização do método get_all para retornar a lista dos players em ordem alfabética
        - Criação do método que compara os usernames dos usuários para utilização como parâmetro na função de ordenação.
        - Adicionado comentários no contrato e na implementação da classe
        - Corrigida a visibilidade de alguns métodos da classe

    Matsura (src, include, Makefile, assets, jogadores.txt)
        -Criação de um arquivo de jogadores para teste da interface
        -Implementação de som na interface do menu
        -Reorganização da interface de menu
        -Separação do jogo do menu em mains diferentes e independentes